--- a/Start.Rmd
+++ b/Start.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "COVID-19 Ergebnisse und Methoden des Zi Data Science Lab"
+title: "COVID-19 Ergebnisse des Zi"
 output: 
   flexdashboard::flex_dashboard:
     orientation: rows
@@ -18,6 +18,77 @@ source("R/functions.R", encoding = "UTF-8")
 
 # Dashboard 
 
+Row {data-height=20}
+------------------------------------------------------------------------
+
+**Zi Frühindikatoren:**
+
+Da Zi hat drei Frühindikatoren definiert, die frühzeitig die Gefahr für die Überlastung des Gesundheitswesens durch COVID-19 anzeigen. Nachfolgend wird unsere tägliche Lageeinschätzung im Hinblick diese Indikatoren dargestellt.
+
+Row 
+------------------------------------------------------------------------
+
+### Reproduktionszahl
+
+```{r}
+indicatorR <- aktuell %>% filter(id==0) %>% collect() %>% pull(R0)
+valueBox(value= paste("R=",format(indicatorR,digits=2,decimal.mark = ","))  ,
+         caption="Reproduktionszahl",
+         color = case_when(indicatorR < 1.0 ~ "green",
+                           indicatorR >= 1.0 & 
+                             indicatorR < 1.3 ~ "orange",
+                           indicatorR >= 1.3 ~ "red"),
+         icon = "fa-users"
+        )
+```
+
+### Neue Fälle pro Tag (10-Tages Mittelwert) 
+
+```{r}
+faelleprotag <-  round(infected/10)
+valueBox(faelleprotag,
+         caption="Neue Fälle pro Tag (10-Tages Durchschnitt)",
+         icon = "fa-chart-line",
+         color = case_when(faelleprotag < 402*3 ~ "green",
+                           faelleprotag >= 402*3 & 
+                             faelleprotag < 402*4 ~ "orange",
+                           faelleprotag >= 402*4 ~ "red")
+        )
+```
+
+### Vorwarnzeit bei R=1,3 
+
+```{r}
+vorwarnzeitaktuell <-theoretisch %>% filter(Rt==1.3) %>% pull(Effektive_Vorwarnzeit)
+valueBox(paste(vorwarnzeitaktuell,"Tage"),
+         caption="Effektive Vorwarnzeit bei R=1.3",
+         icon = "fa-calendar-alt",
+         color = case_when(vorwarnzeitaktuell > 60 ~ "green",
+                           vorwarnzeitaktuell <= 60 & 
+                             vorwarnzeitaktuell > 14 ~ "orange",
+                           vorwarnzeitaktuell < 14 ~ "red")
+        )
+```
+
+Row {data-height=400}
+------------------------------------------------------------------------
+
+### **Aktuelle Vorwarnzeiten**
+
+```{r}
+ggplotly(plot_Anstiegtheor + theme(legend.position='none') )
+```
+
+
+Row {data-height=400}
+------------------------------------------------------------------------
+### **Entwicklung der akut Infizierten**
+
+```{r}
+
+ggplotly(akutinfiziert + labs(title))
+```
+
 Row {data-height=400}
 ------------------------------------------------------------------------
 ### **Entwicklung der Reproduktionszahl**
@@ -27,10 +98,11 @@ mitigationsplot_blvergleich()
 
 ```
 
+
 Row
 -----------------------------------------------------------------------
 
-### **Kennzahlen der Bundesländer**
+### **Überblick zu den Kennzahlen der Bundesländer**
 
 ```{r}
 DT::datatable(rki_fallzahl_bl(),
@@ -42,103 +114,25 @@ DT::datatable(rki_fallzahl_bl(),
 
 ```
 
-# Laboruntersuchungen
-
-Row{data-height=100}
------------------------------------------------------------------------
-
-### **Hintergrund**
-
-Die kassenärztlichen Vereinigungen erheben regelmäßig die Zahl der COVID-19 Testungen in den angeschlossenen Laboren. Die wöchentliche Teskapazität dieser Labore betrug zuletzt ca. `r format(round(laborkapazität/1000)*1000,big.mark=".",decimal.mark=",",scientific=F)` Tsd. Tests pro Tag. Bei 7 Arbeitstagen pro Woche wären derzeit also maximal `r format(round((laborkapazität*7)/1000)*1000,big.mark=".",decimal.mark=",",scientific=F)` Tests auf COVID-19 möglich.
-
-
-Row 
------------------------------------------------------------------------
-
-### Entwicklung der Tests und Fallzahlen
-
-```{r}
-plot_trend_labortests
-
-```
-
-Row 
------------------------------------------------------------------------
-
-### Tests nach KW und Ergebnis
-
-```{r}
-plot_positiv_zu_tests
-```
-
-
-
-### Tests vs. Fälle nach Bundesland
-
-```{r}
-plot_faelle_zu_tests
-```
-
-
-# Projektion
-
-Row {data-height=500}
------------------------------------------------------------------------
-
-### **Bund**
-
-In der Abbildung wird die eine Projektion auf Basis der aktuellen Trendfortschreibung von R(t) mit einer Fortschreibung auf Basis eines Worst-Case Szenarios verglichen. Als Worst-Case-Szenario wird ein oszilieren der Reproduktionszahl R(t) um den Wert 1,3 angenommen.
-
-```{r}
-ggplotly(plot_bundprognose) %>% layout(showlegend = FALSE)
-```
-
-
-Row {data-height=800}
------------------------------------------------------------------------
-
-### **Projektion am `r format(date(now()-days(1)),format="%d.%m.%Y")`**
-
-Diese Abbildung spiegelt die aktuell verfügbaren Meldedaten des RKI wieder. 
-
-```{r}
-plot_prognosismap(myDay=1)
-```
-
-### **Projektion für den `r format(date(now()+days(27)),format="%d.%m.%Y")`**
-
-Fortschreibung des aktuellen Trends von R(t) in den Regionen für 28 Tage.
-
-```{r}
-plot_prognosismap(myDay=28)
-```
-
-# Methoden
-
-Row 
------------------------------------------------------------------------
-
-### Stand und Quellen
-
-**Stand:**
-
-Dieses Dashboard basiert auf Daten der unten angegebenen Quellen mit dem Stand `r paste(format(date(Datenstand$Datum), format="%d.%m.%Y"), " ",Datenstand$Zeit)`.
-
-**Datenquellen:**
-
-- Berechnungen des Zi auf Basis aktueller Meldedaten des Robert Koch-Instituts
-- Daten des DIVI Intensivregisters
-- Daten der kassenärztlichen Bundesvereinigung KBV zu Tests auf COVID-19
-
-Row 
------------------------------------------------------------------------
-
-### Methoden
-
-Hier kommt das Methodenpaper hin.
-
-
 # Impressum
+
+```{r include=FALSE}
+# Datenexport für KBV-Import
+
+frueindikatoren <- bind_cols("Indikator"=c("R-Wert",
+                                           "Neue Fälle pro Tag",
+                                           "Vorwarnzeit aktuell in Tagen"),
+                             "Wert"=c(indicatorR,
+                                      faelleprotag,
+                                      vorwarnzeitaktuell))
+
+write_json(frueindikatoren,"data/frueindikatoren.json")
+write_json(rki_fallzahl_bl(),"data/bundeslaender.json")
+write_json(theoretisch,"data/vorwarnzeiten.json")
+write_json(vorwarndata %>% filter(id==0) %>% select(date,Infected),"data/akutinfiziert.json")
+
+```
+
 
 **Zentralinstitut für die kassenärztliche Versorgung in der Bundesrepublik Deutschland Stiftung des bürgerlichen Rechts**
 
