Added neue Fälle je Bundesland

--- a/Start.Rmd
+++ b/Start.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "COVID-19 Ergebnisse des Zi"
+title: "Zi Frühindikatoren zur COVID-19 Pandemie"
 output: 
   flexdashboard::flex_dashboard:
     orientation: rows
@@ -23,9 +23,7 @@ Row {data-height=100}
 
 ### **Zi Frühindikatoren:** 
 
-Da Zi hat drei Frühindikatoren definiert, die frühzeitig die Gefahr für die Überlastung des Gesundheitswesens durch COVID-19 anzeigen. Nachfolgend wird unsere tägliche Lageeinschätzung im Hinblick diese Indikatoren dargestellt. \
-
-Mehr Informationen finden Sie [hier](https://www.zi.de/presse/presseinformationen/5-mai-2020-2/).
+Da Zi hat drei Frühindikatoren definiert, die frühzeitig die Gefahr für die Überlastung des Gesundheitswesens durch COVID-19 anzeigen. Nachfolgend wird unsere tägliche Lageeinschätzung im Hinblick diese Indikatoren dargestellt. **Mehr Informationen finden Sie [hier](https://www.zi.de/presse/presseinformationen/5-mai-2020-2/)**.
 
 Row 
 ------------------------------------------------------------------------
