--- a/Start.Rmd
+++ b/Start.Rmd
@@ -76,7 +76,7 @@ Row {data-height=400}
 ### **Aktuelle Vorwarnzeiten**
 
 ```{r}
-ggplotly(plot_Anstiegtheor + theme(legend.position='none') )
+ggplotly(plot_Anstiegtheor  )
 ```
 
 
