--- a/Start.Rmd
+++ b/Start.Rmd
@@ -18,12 +18,12 @@ source("R/functions.R", encoding = "UTF-8")
 
 # Dashboard 
 
-Row {data-height=100}
+Row {data-height=125}
 ------------------------------------------------------------------------
 
 ### **Zi Frühindikatoren:** 
 
-Da Zi hat Frühindikatoren entwickelt, die frühzeitig auf die Gefahr für die Überlastung des Gesundheitswesens durch COVID-19 hinweisen sollen. Nachfolgend wird unsere tägliche Lageeinschätzung im Hinblick diese Indikatoren dargestellt. **Mehr Informationen finden Sie [hier](https://www.zi.de/presse/presseinformationen/5-mai-2020-2/)**. 
+Da Zi hat Frühindikatoren entwickelt, die frühzeitig auf die Gefahr für die Überlastung des Gesundheitswesens durch COVID-19 hinweisen sollen. Nachfolgend wird unsere tägliche Lageeinschätzung im Hinblick diese Indikatoren dargestellt. **Nähere Informationen finden Sie [hier](https://www.zi.de/presse/presseinformationen/5-mai-2020-2/)**. 
 
 Stand: `r format(now(),format="%d.%m.%Y %H.%M Uhr")`
 
