--- a/Start.Rmd
+++ b/Start.Rmd
@@ -38,8 +38,8 @@ valueBox(value= paste("R=",format(indicatorR,digits=2,decimal.mark = ","))  ,
          caption="Reproduktionszahl",
          color = case_when(indicatorR < 1.0 ~ "#B1C800",
                            indicatorR >= 1.0 & 
-                             indicatorR < 1.3 ~ "orange",
-                           indicatorR >= 1.3 ~ "red"),
+                             indicatorR < 1.3 ~ "#E49900",
+                           indicatorR >= 1.3 ~ "#E40000"),
          icon = "fa-users"
         )
 ```
@@ -53,8 +53,8 @@ valueBox(faelleprotag,
          icon = "fa-chart-line",
          color = case_when(faelleprotag < 402*3 ~ "#B1C800",
                            faelleprotag >= 402*3 & 
-                             faelleprotag < 402*4 ~ "orange",
-                           faelleprotag >= 402*4 ~ "red")
+                             faelleprotag < 402*4 ~ "#E49900",
+                           faelleprotag >= 402*4 ~ "#E40000")
         )
 ```
 
@@ -67,8 +67,8 @@ valueBox(paste(vorwarnzeitaktuell,"Tage"),
          icon = "fa-calendar-alt",
          color = case_when(vorwarnzeitaktuell > 60 ~ "#B1C800",
                            vorwarnzeitaktuell <= 60 & 
-                             vorwarnzeitaktuell > 14 ~ "orange",
-                           vorwarnzeitaktuell < 14 ~ "red")
+                             vorwarnzeitaktuell > 14 ~ "#E49900",
+                           vorwarnzeitaktuell < 14 ~ "#E40000")
         )
 ```
 
