--- a/Start.Rmd
+++ b/Start.Rmd
@@ -30,7 +30,7 @@ Stand: `r format(now(),format="%d.%m.%Y %H.%M Uhr")`
 Row 
 ------------------------------------------------------------------------
 
-### Reproduktionszahl
+### Reproduktionszahl 
 
 ```{r}
 indicatorR <- aktuell %>% filter(id==0) %>% collect() %>% pull(R0)
@@ -44,6 +44,8 @@ valueBox(value= paste("R =",format(indicatorR,digits=2,decimal.mark = ","))  ,
         )
 ```
 
+Row 
+------------------------------------------------------------------------
 ### Neue Fälle pro Tag (7-Tages-Mittelwert) 
 
 ```{r}
@@ -59,6 +61,8 @@ valueBox(faelleprotag,
         )
 ```
 
+Row 
+------------------------------------------------------------------------
 ### Vorwarnzeit bei R=1,3 
 
 ```{r}
@@ -94,7 +98,7 @@ Row {data-height=400}
 
 ```{r}
 ggplotly(plot_Anstiegtheor  + theme(legend.position='none')+labs(x="R(t)")) %>%
-   config(displayModeBar = FALSE, responsive=T)
+   config(displayModeBar = FALSE, responsive=T,staticPlot=T)
 ```
 
 Row {data-height=100}
@@ -111,7 +115,7 @@ Row {data-height=400}
 ```{r}
 
 ggplotly(akutinfiziert + labs(title="")) %>%
-   config(displayModeBar = FALSE, responsive=T)
+   config(displayModeBar = FALSE, responsive=T,staticPlot=T)
 ```
 
 Row {data-height=100}
@@ -126,7 +130,7 @@ Row {data-height=400}
 
 ```{r}
 mitigationsplot_blvergleich() %>%
-   config(displayModeBar = FALSE, responsive=T)
+   config(displayModeBar = FALSE, responsive=T,staticPlot=T)
 
 ```
 
